# libfhc

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/core/: CMakeLists.txt  fasthullcollision.cpp  fasthullcollision.hpp  simpleraycaster.cpp  simpleraycaster.hpp
src/tests/: CMakeLists.txt  test_counting_performance.cpp  test_cropping.cpp  test_raycasting.cpp  utils.cpp  utils.hpp
testscenes/: blender_cm_cube.stl  crop_many_spheres.exr  crop_many_spheres.stl  cube_1m.exr  cube_1m.stl  manycubes.stl  testscenes.blend
tools/: fxtoblendervof.py  plot_histogram.py
